--- a/adminapp/templates/admin_base.html
+++ b/adminapp/templates/admin_base.html
@@ -206,6 +206,7 @@
                 </a>
             </li>
             <li class="nav-item"><a href="/adminapp/admin_books" class="nav-link"><i class="fas fa-book"></i> Books</a></li>
+            <li class="nav-item"><a href="/adminapp/admin_notes/" class="nav-link"><i class="fas fa-book"></i>Notes</a></li>
             <li class="nav-item"><a href="/adminapp/admin_orders" class="nav-link"><i class="fas fa-shopping-cart"></i> Orders</a></li>
             <li class="nav-item"><a href="/adminapp/admin_users" class="nav-link"><i class="fas fa-users"></i> Users</a></li>
             <li class="nav-item"><a href="/adminapp/admin_add_book" class="nav-link"><i class="fas fa-plus-circle"></i> Add Book</a></li>
