--- a/userapp/templates/contact.html
+++ b/userapp/templates/contact.html
@@ -1,24 +1,47 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="row">
-    <div class="col-md-6 mx-auto">
-        <h2 class="text-center mb-4">Contact Us</h2>
-        <form method="post">
-            {% csrf_token %}
-            <div class="mb-3">
-                <label>Name</label>
-                <input name="name" type="text" class="form-control">
-            </div>
-            <div class="mb-3">
-                <label>Email</label>
-                <input name="email" type="email" class="form-control">
-            </div>
-            <div class="mb-3">
-                <label>Message</label>
-                <textarea name="message" class="form-control" rows="5"></textarea>
-            </div>
-            <button class="btn btn-primary">Send Message</button>
-        </form>
+
+<div class="container my-5">
+    <div class="row align-items-start">
+
+        <!-- LEFT SIDE : CONTACT FORM -->
+        <div class="col-md-6">
+            <h2 class="text-center mb-4">Contact Us</h2>
+
+            <form method="post">
+                {% csrf_token %}
+
+                <div class="mb-3">
+                    <label>Name</label>
+                    <input name="name" type="text" class="form-control">
+                </div>
+
+                <div class="mb-3">
+                    <label>Email</label>
+                    <input name="email" type="email" class="form-control">
+                </div>
+
+                <div class="mb-3">
+                    <label>Message</label>
+                    <textarea name="message" class="form-control" rows="5"></textarea>
+                </div>
+
+                <button class="btn btn-primary">Send Message</button>
+            </form>
+        </div>
+
+        <!-- RIGHT SIDE : GOOGLE MAP -->
+        <div class="col-md-6">
+            <iframe
+                class="w-100 rounded shadow border"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3691.679931494302!2d70.77238027410435!3d22.290111043267054!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3959ca248c77c099%3A0xdf5ac10af64ac8ee!2sTOPS%20Technologies!5e0!3m2!1sen!2sin!4v1764849183860!5m2!1sen!2sin"
+                height="420"
+                style="border:0;"
+                loading="lazy">
+            </iframe>
+        </div>
+
     </div>
 </div>
-{% endblock %} 
+
+{% endblock %}
